# taskflow

./: PHASE2_SKILLS_README.md  README-phase2.md  README.md  phase1.md  phase2-api-builder.skill  phase2-auth-integrator.skill  phase2-plan-generator.skill  phase2-spec-generator.skill  phase2.md
.claude/agents/: ui-ux-architect.md
.claude/skills/: apply-motion-magic.skill  generate-dashboard-widget.skill  scaffold-landing-page.skill
.github/workflows/: backend-ci.yml  frontend-ci.yml
.specify/memory/: constitution.md
backend/: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: __init__.py  config.py  main.py
backend/app/middleware/: auth.py  error_handler.py
backend/app/models/: __init__.py  category.py  notification.py  notification_preference.py  task.py  user.py
backend/app/routes/: auth.py  health.py
backend/app/schemas/: auth.py  error.py
backend/app/services/: auth_service.py
backend/app/utils/: database.py  jwt.py  security.py
frontend/: .env.example  .gitignore  package.json  pnpm-lock.yaml
history/adr/: 0001-glassmorphism-styling-strategy-with-tailwind-backdrop-filters.md  ADR-001-three-layer-architecture-with-protocol-abstraction.md  ADR-002-data-modeling-with-dataclass-and-validation.md  ADR-003-jwt-authentication-with-better-auth-and-fastapi-verification.md  (+3 more)
phase-1-console/: .gitignore  README-phase1.md  pyproject.toml
phase-1-console/src/: __init__.py  cli.py  main.py  models.py  services.py  storage.py  task_handlers.py
phase-1-console/tests/: __init__.py  conftest.py
phase-1-console/tests/integration/: __init__.py  test_cli.py
phase-1-console/tests/unit/: __init__.py  test_models.py  test_services.py  test_storage.py  test_task_handlers.py
shared/types/: api.ts  index.ts
(+97 files in other folders)
